tests/spec/compile-fail/007_const_oob_index.zn
// category: compile-fail
// profile: freestanding
// purpose: constant out-of-bounds indexing is rejected

module tests.fail.constOobIndex;

import core.alloc.{AllocError, GlobalAllocator};
import core.result.{Result, Ok};

fn main(mut allocator: GlobalAllocator) -> Result<Unit, AllocError> {
    val bytes = Array<U8>.filledIn(4, 0, mut allocator);
    val value = bytes[4]; // expected-error: constant index is out of bounds
    return Ok(());
}
